--- a/Project/Assignment_1.ipynb
+++ b/Project/Assignment_1.ipynb
@@ -61,77 +61,130 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>article_id</th>\n",
-       "      <th>annotator</th>\n",
-       "      <th>node</th>\n",
-       "      <th>ranges</th>\n",
-       "      <th>tokens</th>\n",
-       "      <th>label</th>\n",
+       "      <th>title</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>body</th>\n",
+       "      <th>meta_description</th>\n",
+       "      <th>topics</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>publish_date</th>\n",
+       "      <th>url_canonical</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>5d04a31b896a7fea069ef06f</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[[2516, 2556]]</td>\n",
-       "      <td>O facto não é apenas fruto da ignorância</td>\n",
-       "      <td>Value</td>\n",
+       "      <td>Pouco pão e muito circo, morte e bocejo</td>\n",
+       "      <td>['José Vítor Malheiros']</td>\n",
+       "      <td>O poeta espanhol António Machado escrevia, uns...</td>\n",
+       "      <td>É tudo cómico na FIFA, porque todos os dias a ...</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>['Brasil', 'Campeonato do Mundo', 'Desporto', ...</td>\n",
+       "      <td>2014-06-17 00:16:00</td>\n",
+       "      <td>https://www.publico.pt/2014/06/17/desporto/opi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5d04a31b896a7fea069ef06f</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[[2568, 2806]]</td>\n",
-       "      <td>havia no seu humor mais jornalismo (mais inves...</td>\n",
-       "      <td>Value</td>\n",
+       "      <td>5d04a3fc896a7fea069f0717</td>\n",
+       "      <td>Portugal nos Mundiais de Futebol de 2010 e 2014</td>\n",
+       "      <td>['Rui J. Baptista']</td>\n",
+       "      <td>“O mais excelente quadro posto a uma luz logo ...</td>\n",
+       "      <td>Deve ser evidenciado o clima favorável criado ...</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>['Brasil', 'Campeonato do Mundo', 'Coreia do N...</td>\n",
+       "      <td>2014-07-05 02:46:00</td>\n",
+       "      <td>https://www.publico.pt/2014/07/05/desporto/opi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5d04a31b896a7fea069ef06f</td>\n",
-       "      <td>A</td>\n",
-       "      <td>3</td>\n",
-       "      <td>[[3169, 3190]]</td>\n",
-       "      <td>É tudo cómico na FIFA</td>\n",
-       "      <td>Value</td>\n",
+       "      <td>5d04a455896a7fea069f07ab</td>\n",
+       "      <td>Futebol, guerra, religião</td>\n",
+       "      <td>['Fernando Belo']</td>\n",
+       "      <td>1. As sociedades humanas parecem ser regidas p...</td>\n",
+       "      <td>O futebol parece ser um sucedâneo quer da lei ...</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>['A guerra na Síria', 'Desporto', 'Futebol', '...</td>\n",
+       "      <td>2014-07-12 16:05:33</td>\n",
+       "      <td>https://www.publico.pt/2014/07/12/desporto/opi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5d04a31b896a7fea069ef06f</td>\n",
-       "      <td>A</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[[3198, 3285]]</td>\n",
-       "      <td>o que todos nós permitimos que esta organizaçã...</td>\n",
-       "      <td>Value</td>\n",
+       "      <td>5d04a52f896a7fea069f0921</td>\n",
+       "      <td>As razões do Qatar para acolher o Mundial em 2022</td>\n",
+       "      <td>['Hamad bin Khalifa bin Ahmad Al Thani']</td>\n",
+       "      <td>Este foi um Mundial incrível. Vimos actuações ...</td>\n",
+       "      <td>Queremos cooperar plenamente com a investigaçã...</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>['Desporto', 'FIFA', 'Futebol', 'Mundial de fu...</td>\n",
+       "      <td>2014-07-27 02:00:00</td>\n",
+       "      <td>https://www.publico.pt/2014/07/27/desporto/opi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5d04a31b896a7fea069ef06f</td>\n",
-       "      <td>A</td>\n",
-       "      <td>6</td>\n",
-       "      <td>[[4257, 4296]]</td>\n",
-       "      <td>não nos fazem rir à custa dos poderosos</td>\n",
-       "      <td>Value</td>\n",
+       "      <td>5d04a8d7896a7fea069f6997</td>\n",
+       "      <td>A política no campo de futebol</td>\n",
+       "      <td>['Carlos Nolasco']</td>\n",
+       "      <td>O futebol sempre foi um jogo aparentemente sim...</td>\n",
+       "      <td>Retirar a expressão política do futebol é reti...</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>['Albânia', 'Campeonato da Europa', 'Desporto'...</td>\n",
+       "      <td>2014-10-23 00:16:00</td>\n",
+       "      <td>https://www.publico.pt/2014/10/23/desporto/opi...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 article_id annotator  node          ranges  \\\n",
-       "0  5d04a31b896a7fea069ef06f         A     0  [[2516, 2556]]   \n",
-       "1  5d04a31b896a7fea069ef06f         A     1  [[2568, 2806]]   \n",
-       "2  5d04a31b896a7fea069ef06f         A     3  [[3169, 3190]]   \n",
-       "3  5d04a31b896a7fea069ef06f         A     4  [[3198, 3285]]   \n",
-       "4  5d04a31b896a7fea069ef06f         A     6  [[4257, 4296]]   \n",
+       "                 article_id  \\\n",
+       "0  5d04a31b896a7fea069ef06f   \n",
+       "1  5d04a3fc896a7fea069f0717   \n",
+       "2  5d04a455896a7fea069f07ab   \n",
+       "3  5d04a52f896a7fea069f0921   \n",
+       "4  5d04a8d7896a7fea069f6997   \n",
        "\n",
-       "                                              tokens  label  \n",
-       "0           O facto não é apenas fruto da ignorância  Value  \n",
-       "1  havia no seu humor mais jornalismo (mais inves...  Value  \n",
-       "2                              É tudo cómico na FIFA  Value  \n",
-       "3  o que todos nós permitimos que esta organizaçã...  Value  \n",
-       "4            não nos fazem rir à custa dos poderosos  Value  "
+       "                                               title  \\\n",
+       "0            Pouco pão e muito circo, morte e bocejo   \n",
+       "1    Portugal nos Mundiais de Futebol de 2010 e 2014   \n",
+       "2                          Futebol, guerra, religião   \n",
+       "3  As razões do Qatar para acolher o Mundial em 2022   \n",
+       "4                     A política no campo de futebol   \n",
+       "\n",
+       "                                    authors  \\\n",
+       "0                  ['José Vítor Malheiros']   \n",
+       "1                       ['Rui J. Baptista']   \n",
+       "2                         ['Fernando Belo']   \n",
+       "3  ['Hamad bin Khalifa bin Ahmad Al Thani']   \n",
+       "4                        ['Carlos Nolasco']   \n",
+       "\n",
+       "                                                body  \\\n",
+       "0  O poeta espanhol António Machado escrevia, uns...   \n",
+       "1  “O mais excelente quadro posto a uma luz logo ...   \n",
+       "2  1. As sociedades humanas parecem ser regidas p...   \n",
+       "3  Este foi um Mundial incrível. Vimos actuações ...   \n",
+       "4  O futebol sempre foi um jogo aparentemente sim...   \n",
+       "\n",
+       "                                    meta_description  topics  \\\n",
+       "0  É tudo cómico na FIFA, porque todos os dias a ...  Sports   \n",
+       "1  Deve ser evidenciado o clima favorável criado ...  Sports   \n",
+       "2  O futebol parece ser um sucedâneo quer da lei ...  Sports   \n",
+       "3  Queremos cooperar plenamente com a investigaçã...  Sports   \n",
+       "4  Retirar a expressão política do futebol é reti...  Sports   \n",
+       "\n",
+       "                                            keywords         publish_date  \\\n",
+       "0  ['Brasil', 'Campeonato do Mundo', 'Desporto', ...  2014-06-17 00:16:00   \n",
+       "1  ['Brasil', 'Campeonato do Mundo', 'Coreia do N...  2014-07-05 02:46:00   \n",
+       "2  ['A guerra na Síria', 'Desporto', 'Futebol', '...  2014-07-12 16:05:33   \n",
+       "3  ['Desporto', 'FIFA', 'Futebol', 'Mundial de fu...  2014-07-27 02:00:00   \n",
+       "4  ['Albânia', 'Campeonato da Europa', 'Desporto'...  2014-10-23 00:16:00   \n",
+       "\n",
+       "                                       url_canonical  \n",
+       "0  https://www.publico.pt/2014/06/17/desporto/opi...  \n",
+       "1  https://www.publico.pt/2014/07/05/desporto/opi...  \n",
+       "2  https://www.publico.pt/2014/07/12/desporto/opi...  \n",
+       "3  https://www.publico.pt/2014/07/27/desporto/opi...  \n",
+       "4  https://www.publico.pt/2014/10/23/desporto/opi...  "
       ]
      },
      "execution_count": 1,
@@ -146,7 +199,8 @@
     "train = pd.read_excel('OpArticles_ADUs.xlsx')\n",
     "test = pd.read_excel('OpArticles.xlsx')\n",
     "\n",
-    "train.head()"
+    "print(train.head())\n",
+    "print(test.head())"
    ]
   },
   {
@@ -158,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +246,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -326,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -365,19 +419,19 @@
       "(3349, 78134) (3349,)\n",
       "\n",
       "Label distribution in the training set:\n",
-      "Value       6480\n",
-      "Fact        2937\n",
-      "Value(-)    2327\n",
-      "Value(+)    1127\n",
-      "Policy       523\n",
+      "Value       6501\n",
+      "Fact        2938\n",
+      "Value(-)    2312\n",
+      "Value(+)    1100\n",
+      "Policy       543\n",
       "Name: label, dtype: int64\n",
       "\n",
       "Label distribution in the test set:\n",
-      "Value       1622\n",
-      "Fact         726\n",
-      "Value(-)     573\n",
-      "Value(+)     284\n",
-      "Policy       144\n",
+      "Value       1601\n",
+      "Fact         725\n",
+      "Value(-)     588\n",
+      "Value(+)     311\n",
+      "Policy       124\n",
       "Name: label, dtype: int64\n"
      ]
     }
