base line train

--- a/Project/Assignment1/classification.ipynb
+++ b/Project/Assignment1/classification.ipynb
@@ -435,7 +435,6 @@
    ],
    "source": [
     "import re\n",
-    "from nltk.corpus import stopwords\n",
     "\n",
     "corpus = []\n",
     "stemmer = rslp\n",
@@ -459,7 +458,7 @@
     "\n",
     "The next step is to obtain the features we will use to train our model.\n",
     "\n",
-    "For this, we will use TF-IDF with N-Grams, but firstly, we will divide our tokens from our label:\n",
+    "For this, we will use TF-IDF with N-Grams\n",
     "\n",
     "TODO: explore [TfidfVectorizer params](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html)"
    ]
@@ -473,14 +472,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Number of samples, Number of features): (16743, 7601)\n"
+      "(Number of samples, Number of features): (16743, 69385)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "    \n",
-    "vectorizer = TfidfVectorizer()\n",
+    "vectorizer = TfidfVectorizer(ngram_range=(1,2))\n",
     "X = vectorizer.fit_transform(corpus).toarray()\n",
     "\n",
     "print(\"(Number of samples, Number of features):\", X.shape)"
@@ -533,14 +532,23 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fmna\\anaconda3\\lib\\site-packages\\xgboost\\compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "# Metrics\n",
     "import sklearn.metrics as metrics\n",
+    "import time\n",
     "\n",
     "# Cross Validation and Hyper Tuning\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split, cross_validate, StratifiedKFold, GridSearchCV\n",
     "\n",
     "# Classifiers\n",
     "from sklearn.naive_bayes import MultinomialNB, ComplementNB\n",
@@ -569,8 +577,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13394, 7601) (13394,)\n",
-      "(3349, 7601) (3349,)\n",
+      "(13394, 69385) (13394,)\n",
+      "(3349, 69385) (3349,)\n",
       "\n",
       "Label distribution in the training set:\n",
       "Value       6481\n",
@@ -591,8 +599,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state=0, stratify=y, shuffle=True)\n",
     "\n",
     "print(X_train.shape, y_train.shape)\n",
@@ -603,6 +609,307 @@
     "\n",
     "print(\"\\nLabel distribution in the test set:\")\n",
     "print(y_test.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Base line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(clf):\n",
+    "    start = time.time()\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    y_pred = clf.predict(X_test)\n",
+    "    stop = time.time()\n",
+    "\n",
+    "    # Metrics\n",
+    "    print(\"Elapsed time: %0.2fs\" % (stop - start))\n",
+    "    print(\"\\nConfusion matrix:\\n\", metrics.confusion_matrix(y_test, y_pred))\n",
+    "    print(\"Classification report:\\n\", metrics.classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Confusion matrix:\n",
+      " [[  64    0  667    0    2]\n",
+      " [   0    0  133    0    0]\n",
+      " [  23    0 1592    0    6]\n",
+      " [   5    0  277    0    0]\n",
+      " [   7    0  557    0   16]]\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.65      0.09      0.15       733\n",
+      "      Policy       0.00      0.00      0.00       133\n",
+      "       Value       0.49      0.98      0.66      1621\n",
+      "    Value(+)       0.00      0.00      0.00       282\n",
+      "    Value(-)       0.67      0.03      0.05       580\n",
+      "\n",
+      "    accuracy                           0.50      3349\n",
+      "   macro avg       0.36      0.22      0.17      3349\n",
+      "weighted avg       0.50      0.50      0.36      3349\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fmna\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\fmna\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\Users\\fmna\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "mnb = predict(MultinomialNB())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Confusion matrix:\n",
+      " [[ 281   24  309   48   71]\n",
+      " [   2   56   62   10    3]\n",
+      " [ 251   50 1047   91  182]\n",
+      " [  38   11  110  107   16]\n",
+      " [  62   19  207   15  277]]\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.44      0.38      0.41       733\n",
+      "      Policy       0.35      0.42      0.38       133\n",
+      "       Value       0.60      0.65      0.62      1621\n",
+      "    Value(+)       0.39      0.38      0.39       282\n",
+      "    Value(-)       0.50      0.48      0.49       580\n",
+      "\n",
+      "    accuracy                           0.53      3349\n",
+      "   macro avg       0.46      0.46      0.46      3349\n",
+      "weighted avg       0.52      0.53      0.52      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnb = predict(ComplementNB())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Confusion matrix:\n",
+      " [[ 207    1  448   29   48]\n",
+      " [   1   43   81    6    2]\n",
+      " [ 163   12 1298   41  107]\n",
+      " [  30    4  162   78    8]\n",
+      " [  43    1  330    3  203]]\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.47      0.28      0.35       733\n",
+      "      Policy       0.70      0.32      0.44       133\n",
+      "       Value       0.56      0.80      0.66      1621\n",
+      "    Value(+)       0.50      0.28      0.36       282\n",
+      "    Value(-)       0.55      0.35      0.43       580\n",
+      "\n",
+      "    accuracy                           0.55      3349\n",
+      "   macro avg       0.56      0.41      0.45      3349\n",
+      "weighted avg       0.54      0.55      0.52      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sgd = predict(SGDClassifier(random_state=0, n_jobs=-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Confusion matrix:\n",
+      " [[ 179    0  526    4   24]\n",
+      " [   0    9  123    0    1]\n",
+      " [ 126    3 1436    4   52]\n",
+      " [  22    1  230   25    4]\n",
+      " [  33    1  423    0  123]]\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.50      0.24      0.33       733\n",
+      "      Policy       0.64      0.07      0.12       133\n",
+      "       Value       0.52      0.89      0.66      1621\n",
+      "    Value(+)       0.76      0.09      0.16       282\n",
+      "    Value(-)       0.60      0.21      0.31       580\n",
+      "\n",
+      "    accuracy                           0.53      3349\n",
+      "   macro avg       0.61      0.30      0.32      3349\n",
+      "weighted avg       0.56      0.53      0.46      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lg = predict(LogisticRegression(random_state=0, n_jobs=-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fmna\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:284: ConvergenceWarning: Solver terminated early (max_iter=100).  Consider pre-processing your data with StandardScaler or MinMaxScaler.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Confusion matrix:\n",
+      " [[ 605   45   30   21   32]\n",
+      " [  61   54    6    5    7]\n",
+      " [1219  145  115   65   77]\n",
+      " [ 204   29   17   21   11]\n",
+      " [ 413   42   47   21   57]]\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        Fact       0.24      0.83      0.37       733\n",
+      "      Policy       0.17      0.41      0.24       133\n",
+      "       Value       0.53      0.07      0.13      1621\n",
+      "    Value(+)       0.16      0.07      0.10       282\n",
+      "    Value(-)       0.31      0.10      0.15       580\n",
+      "\n",
+      "    accuracy                           0.25      3349\n",
+      "   macro avg       0.28      0.30      0.20      3349\n",
+      "weighted avg       0.39      0.25      0.19      3349\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "svc = predict(SVC(random_state=0, max_iter=100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = predict(DecisionTreeClassifier(random_state=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = predict(RandomForestClassifier(random_state=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "per = predict(Perceptron(random_state=0))"
    ]
   },
   {
@@ -621,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +943,10 @@
     "                               n_jobs=-1,\n",
     "                               refit=True)\n",
     "\n",
+    "    start = time.time()\n",
     "    grid_search.fit(X_train, y_train)\n",
+    "    stop = time.time()\n",
+    "    print(f\"Fit time: {stop - start}s\")\n",
     "\n",
     "    print(\"\\nBest score:\", grid_search.best_score_)\n",
     "    print(\"Best parameters:\", grid_search.best_params_)\n",
@@ -656,12 +966,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Naive Bayes"
+    "#### Naive Bayes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -761,114 +1071,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logistic Regression\n",
-    "\n",
-    "takes too long"
+    "#### SGD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fmna\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1317: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l2)\n",
-      "  warnings.warn(\"l1_ratio parameter is only used when penalty is \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best score: 0.5164247078694941\n",
-      "Best parameters: {'class_weight': None, 'l1_ratio': 0.5, 'penalty': 'l2', 'solver': 'saga'}\n",
-      "Best estimator: LogisticRegression(l1_ratio=0.5, random_state=0, solver='saga')\n",
-      "\n",
-      "Confusion matrix:\n",
-      " [[ 208    1  483    6   35]\n",
-      " [   4   14  112    2    1]\n",
-      " [ 162    5 1366    9   79]\n",
-      " [  32    3  207   31    9]\n",
-      " [  47    2  400    0  131]]\n",
-      "Classification report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "        Fact       0.46      0.28      0.35       733\n",
-      "      Policy       0.56      0.11      0.18       133\n",
-      "       Value       0.53      0.84      0.65      1621\n",
-      "    Value(+)       0.65      0.11      0.19       282\n",
-      "    Value(-)       0.51      0.23      0.31       580\n",
-      "\n",
-      "    accuracy                           0.52      3349\n",
-      "   macro avg       0.54      0.31      0.34      3349\n",
-      "weighted avg       0.52      0.52      0.47      3349\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "clf = LogisticRegression(random_state=0)\n",
-    "\n",
-    "parameter_grid= {'solver': ['saga'], 'penalty': ['elasticnet', 'l1', 'l2'], 'l1_ratio': [0.5], 'class_weight': [None, 'balanced']}\n",
-    "\n",
-    "lg = grid_search(clf, parameter_grid)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SGD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
-      "\n",
-      "Best score: 0.5203067255318313\n",
-      "Best parameters: {'class_weight': None, 'loss': 'hinge', 'penalty': 'l2'}\n",
-      "Best estimator: SGDClassifier(n_jobs=-1, random_state=0)\n",
-      "\n",
-      "Confusion matrix:\n",
-      " [[ 218    2  429   25   59]\n",
-      " [   4   37   82    7    3]\n",
-      " [ 175   16 1252   34  144]\n",
-      " [  36    4  166   53   23]\n",
-      " [  49    4  319   10  198]]\n",
-      "Classification report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "        Fact       0.45      0.30      0.36       733\n",
-      "      Policy       0.59      0.28      0.38       133\n",
-      "       Value       0.56      0.77      0.65      1621\n",
-      "    Value(+)       0.41      0.19      0.26       282\n",
-      "    Value(-)       0.46      0.34      0.39       580\n",
-      "\n",
-      "    accuracy                           0.52      3349\n",
-      "   macro avg       0.49      0.38      0.41      3349\n",
-      "weighted avg       0.51      0.52      0.50      3349\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf = SGDClassifier(random_state=0, n_jobs=-1)\n",
     "\n",
@@ -882,7 +1092,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decision Tree"
+    "#### Logistic Regression\n",
+    "\n",
+    "takes too long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = LogisticRegression(random_state=0, n_jobs=-1)\n",
+    "\n",
+    "parameter_grid= {'solver': ['saga'], 'penalty': ['elasticnet', 'l1', 'l2'], 'l1_ratio': [0.5], 'class_weight': [None, 'balanced']}\n",
+    "\n",
+    "lg = grid_search(clf, parameter_grid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = SVC(random_state=0, max_iter=200)\n",
+    "\n",
+    "parameter_grid= {}\n",
+    "\n",
+    "svc = grid_search(clf, parameter_grid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Decision Tree"
    ]
   },
   {
@@ -902,7 +1154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random Forest"
+    "#### Random Forest"
    ]
   },
   {
@@ -922,27 +1174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SVC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = SVC(random_state=0)\n",
-    "\n",
-    "parameter_grid= {}\n",
-    "\n",
-    "svc = grid_search(clf, parameter_grid)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Perceptron"
+    "#### Perceptron"
    ]
   },
   {
@@ -962,7 +1194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### XGBoost"
+    "#### XGBoost"
    ]
   },
   {
@@ -995,7 +1227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
