--- a/Project/Assignment1/word_embeddings.ipynb
+++ b/Project/Assignment1/word_embeddings.ipynb
@@ -311,7 +311,7 @@
     "documents = []\n",
     "for i in range(0, articles['body'].size):\n",
     "    # get review, remove non alpha chars and convert to lower-case\n",
-    "    review = re.sub('[^a-zA-Z]', ' ', articles['body'][i]).lower()\n",
+    "    review = re.sub('[^a-zA-Z\\u00C0-\\u00ff]', ' ', articles['body'][i]).lower()\n",
     "    # add review to corpus\n",
     "    documents.append(review.split())"
    ]
@@ -332,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time: 0:00:03.670965\n"
+      "Training time: 0:00:03.988001\n"
      ]
     }
    ],
@@ -372,7 +372,27 @@
     "\n",
     "A number of embeddings for Portuguese are available at [NILC](http://nilc.icmc.usp.br/embeddings), as well as at the [NLX-group](https://github.com/nlx-group/LX-DSemVectors).\n",
     "\n",
-    "Using FastText skip-gram 100 here"
+    "Using FastText skip-gram 1000 here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# takes a while to load...\n",
+    "model_pt = KeyedVectors.load_word2vec_format('./word_vectors/skip_s1000.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save model word vectors\n",
+    "model_pt.save(\"./word_vectors/pt_wv_s1000\")"
    ]
   },
   {
@@ -381,28 +401,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# takes a while to load...\n",
-    "model_pt = KeyedVectors.load_word2vec_format('./word_vectors/skip_s100.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save model word vectors\n",
-    "model_pt.save(\"./word_vectors/pt_wv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# load model word vectors (much faster than the above)\n",
-    "model_pt = KeyedVectors.load(\"./word_vectors/pt_wv\")"
+    "model_pt = KeyedVectors.load(\"./word_vectors/pt_wv_s1000\")"
    ]
   },
   {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "[16743 rows x 6 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,14 +601,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
     "for i in range(0, dataset['tokens'].size):\n",
     "    # get review, remove non alpha chars and convert to lower-case\n",
-    "    review = re.sub('[^a-zA-Z]', ' ', dataset['tokens'][i]).lower()\n",
+    "    review = re.sub('[^a-zA-Z\\u00C0-\\u00ff]', ' ', dataset['tokens'][i]).lower()\n",
     "    # add review to corpus\n",
     "    corpus.append(review)"
    ]
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,14 +668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 92 16.132174640148122 10.750637692983176 ModeResult(mode=array([10]), count=array([916]))\n"
+      "1 82 14.30406737143881 9.470560303048728 ModeResult(mode=array([8]), count=array([972]))\n"
      ]
     }
    ],
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -736,23 +736,23 @@
      "text": [
       "\n",
       "Confusion matrix:\n",
-      " [[176   6 331  22 198]\n",
-      " [  5  39  65   7  17]\n",
-      " [175  22 959  65 400]\n",
-      " [ 34   1 131  39  77]\n",
-      " [ 71   3 290  26 190]]\n",
+      " [[ 220   59  392   20   42]\n",
+      " [   9   53   70    0    1]\n",
+      " [ 200  123 1187   33   78]\n",
+      " [  45   33  173   12   19]\n",
+      " [  92   27  404   10   47]]\n",
       "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "        Fact       0.38      0.24      0.29       733\n",
-      "      Policy       0.55      0.29      0.38       133\n",
-      "       Value       0.54      0.59      0.56      1621\n",
-      "    Value(+)       0.25      0.14      0.18       282\n",
-      "    Value(-)       0.22      0.33      0.26       580\n",
+      "        Fact       0.39      0.30      0.34       733\n",
+      "      Policy       0.18      0.40      0.25       133\n",
+      "       Value       0.53      0.73      0.62      1621\n",
+      "    Value(+)       0.16      0.04      0.07       282\n",
+      "    Value(-)       0.25      0.08      0.12       580\n",
       "\n",
-      "    accuracy                           0.42      3349\n",
-      "   macro avg       0.39      0.32      0.34      3349\n",
-      "weighted avg       0.42      0.42      0.41      3349\n",
+      "    accuracy                           0.45      3349\n",
+      "   macro avg       0.30      0.31      0.28      3349\n",
+      "weighted avg       0.41      0.45      0.41      3349\n",
       "\n"
      ]
     }
@@ -781,14 +781,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(16743, 1500) (16743,)\n"
+      "(16743, 15000) (16743,)\n"
      ]
     }
    ],
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -822,23 +822,23 @@
      "text": [
       "\n",
       "Confusion matrix:\n",
-      " [[ 166   13  461   39   54]\n",
-      " [   1   54   69    7    2]\n",
-      " [ 146   59 1203   89  124]\n",
-      " [  23   11  170   58   20]\n",
-      " [  46   12  373   18  131]]\n",
+      " [[273   3 321  42  94]\n",
+      " [  3  60  48  13   9]\n",
+      " [267  24 999 106 225]\n",
+      " [ 41   3 114 101  23]\n",
+      " [ 67   3 225  11 274]]\n",
       "Classification report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "        Fact       0.43      0.23      0.30       733\n",
-      "      Policy       0.36      0.41      0.38       133\n",
-      "       Value       0.53      0.74      0.62      1621\n",
-      "    Value(+)       0.27      0.21      0.24       282\n",
-      "    Value(-)       0.40      0.23      0.29       580\n",
+      "        Fact       0.42      0.37      0.39       733\n",
+      "      Policy       0.65      0.45      0.53       133\n",
+      "       Value       0.59      0.62      0.60      1621\n",
+      "    Value(+)       0.37      0.36      0.36       282\n",
+      "    Value(-)       0.44      0.47      0.45       580\n",
       "\n",
-      "    accuracy                           0.48      3349\n",
-      "   macro avg       0.40      0.36      0.36      3349\n",
-      "weighted avg       0.46      0.48      0.45      3349\n",
+      "    accuracy                           0.51      3349\n",
+      "   macro avg       0.49      0.45      0.47      3349\n",
+      "weighted avg       0.51      0.51      0.51      3349\n",
       "\n"
      ]
     }
