--- a/Project/Assignment1/stemmer.ipynb
+++ b/Project/Assignment1/stemmer.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,18 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 3.80s\n",
+      "Preprocess time: 2.73s\n",
       "\n",
       "(Number of samples, Number of features): (16743, 15018)\n",
       "\n",
-      "Model time: 1.04s\n",
+      "Model time: 0.63s\n",
       "\n",
       "Confusion matrix:\n",
       " [[306  21 279  45  82]\n",
@@ -237,18 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 3.89s\n",
+      "Preprocess time: 3.16s\n",
       "\n",
       "(Number of samples, Number of features): (16743, 8773)\n",
       "\n",
-      "Model time: 0.48s\n",
+      "Model time: 0.34s\n",
       "\n",
       "Confusion matrix:\n",
       " [[300  30 292  40  71]\n",
@@ -286,18 +286,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocess time: 7.07s\n",
+      "Preprocess time: 5.25s\n",
       "\n",
       "(Number of samples, Number of features): (16743, 7843)\n",
       "\n",
-      "Model time: 0.50s\n",
+      "Model time: 0.30s\n",
       "\n",
       "Confusion matrix:\n",
       " [[298  23 292  46  74]\n",
@@ -325,6 +325,13 @@
    "source": [
     "test_stemmer(rslp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -332,7 +339,7 @@
    "hash": "55f82424ee0038bf843e9f84700baa6bcc97076ded2739a9002049e8174a9129"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -346,9 +353,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.5"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
